--- a/web-site/index.html
+++ b/web-site/index.html
@@ -101,117 +101,37 @@
 
         </section>
 
-    <h1>Web Login</h1>
+    <h1>List Project</h1>
 
-    <section class="grid1">
-        <div>
-            <a href="/javaScript/projetos/projeto1/index.html"> <img src="img/drn.jpg">
-             </a>
-             <p>Legendas</p>
-         </div>
-         <div>
-             <a href="/javaScript/projetos/projeto2/index.html"> <img src="img/drn.jpg">
-              </a>
-              <p>Legendas</p>
-          </div>
-          <div>
-             <a href="/web-site/flexbox_grid/teste01/index.html"> <img src="img/drn.jpg">
-              </a>
-              <p>Legendas</p>
-          </div>
-          <div>
-             <a href="/web-site/flexbox_grid/teste01/index.html"> <img src="img/drn.jpg">
-              </a>
-              <p>Legendas</p>
-          </div>
-          <div>
-             <a href="/web-site/flexbox_grid/teste01/index.html"> <img src="img/drn.jpg">
-              </a>
-              <p>Legendas</p>
-          </div>
-          <div>
-             <a href="/web-site/flexbox_grid/teste01/index.html"> <img src="img/drn.jpg">
-              </a>
-              <p>Legendas</p>
-          </div>
-          <div>
-            <a href="/web-site/flexbox_grid/teste01/index.html"> <img src="img/drn.jpg">
-             </a>
-             <p>Legendas</p>
-         </div>  <div>
-            <a href="/web-site/flexbox_grid/teste01/index.html"> <img src="img/drn.jpg">
-             </a>
-             <p>Legendas</p>
-         </div>
-         <div>
-            <a href="/web-site/flexbox_grid/teste01/index.html"> <img src="img/drn.jpg">
-             </a>
-             <p>Legendas</p>
-         </div>
- 
-          <div class="anuncio">
-            <a href="/web-site/flexbox_grid/teste01/index.html"> <img src="img/drn.jpg">
-             </a>
-             <p>Legendas</p>
-         </div>
+<section>
+    <div class="container">
+        <div class="list">
+            <ul class="items">
+                <li class="item">
+                    <h1><a href="/web-site/web-food/index.html">Food Fun</a></h1>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo, alias. 
+                    <br> Minus nihil error eligendi, deserunt impedit exercitationem. </p>
+                </li>
+                <li class="item">
+                    <h1><a href="/web-site/">Project</a></h1>
+                </li>
+                <li class="item">
+                    <h1><a href="/web-site/">Project</a></h1>
+                </li>
+                <li class="item">
+                    <h1><a href="/web-site/">Project</a></h1>
+                </li>
+                <li class="item">
+                    <h1><a href="/web-site/">Project</a></h1>
+                </li>
+                <li class="item">
+                    <h1><a href="/web-site/">Project</a></h1>
+                </li>
 
-
-    </section>
-
-    <h1>Pixel Art</h1>
-
-    <section class="grid2">
-
-        <div class="videos">
-            <img src="img/tl.jpg">
-
-            <h2>Como criar sites.</h2>
+            </ul>
         </div>
-        <div class="sidebar">
-            <div>
-                <img src="img/tl.jpg">
-                <p>Legendas</p>
-            </div>
-            <div>
-                <img src="img/tl.jpg">
-                <p>Legendas</p>
-            </div>
-            <div>
-                <img src="imge/tl.jpg">
-                <p>Legendas</p>
-            </div>
-            <div>
-                <img src="img/tl.jpg">
-                <p>Legendas</p>
-            </div>
-            <div>
-                <img src="img/tl.jpg">
-                <p>Legendas</p>
-            </div>
-
-
-    </section>
-
-    <h1>Section Grid 3</h1>
-
-    <section class="grid3">
-
-        <div class="grid3-itens">
-            <img src="img/drn.jpg">
-            <p>Legendas</p>
-        </div>
-
-        <div class="grid3-itens">
-            <img src="img/tl.jpg">
-            <p>Legendas</p>
-        </div>
-
-        <div class="grid3-itens">
-            <img src="img/bng.jpg">
-            <p>Legendas</p>
-        </div>
-
-    </section>
+    </div>
+</section>
 
 
 
