--- a/web-project/curso/index.html
+++ b/web-project/curso/index.html
@@ -7,18 +7,30 @@
     <title>Javascript</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
-
-   
-
 </head>
 
-<body> 
-    <!--Cards-->
+<body>
+    <!---->
+    <audio id="sound" src="#" style="display: none"></audio>
+
+    <div class="container">
+        <h2>Minutos</h2>
+        <select id="minutos" name="minutos"></select>
+
+        <h2>Segundos</h2>
+        <select id="segundos" name="segundos"></select>
+        <br>
+        <br>
+        <button id="comecar">Começar</button>
+
+        <div class="display">
+            <h3></h3>
+        </div>
 
 
+    </div>
 
-
-   <!--link js-->
+    <!--link js-->
     <script src='script.js'></script>
 </body>
 
