project dog finishin

--- a/web-site/a/index.html
+++ b/web-site/a/index.html
@@ -9,8 +9,13 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <h1>ola mundo
-<a href="/web-site/a/home.html">click</a>
-    </h1>
+    <h1>Glossario</h1>
+    <dl>
+        <dt>Grupo 1</dt>
+        <dd>este grupo fala sobre ti</dd>
+
+        <dt>Grupo 2</dt>
+        <dd>este grupo fala de arte</dd>
+    </dl>
 </body>
 </html>
