--- a/web-site/web-dog/index.html
+++ b/web-site/web-dog/index.html
@@ -33,7 +33,7 @@
         </div>
     </header>
 
-    <!--main-header-->
+    <!--main-->
     <section class="main-header">
         <div class="main-text">
             <h5>Welcome!</h5>
@@ -45,16 +45,18 @@
             </div>
         </div>
     </section>
-
+ <!--footer-->
     <div class="left">
-        <a href="#"><i class="bx "></i></a>
-        <a href="#"><i class="bx "></i></a>
-        <a href="#"><i class="bx "></i></a>
+        <a href="#"><i class="bx bxl-twitter"></i></a>
+        <a href="#"><i class="bx bxl-facebook"></i></a>
+        <a href="#"><i class="bx bxl-instagram"></i></a>
+    </div>
+    <div class="right">
+        <a href="#" class="scroll">Scroll Down<i class="bx bx-chevrons-down"></i></a>
     </div>
 
-
     <!--script js-->
-    <script src="" async defer></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
