--- a/web-site/web-form/index.html
+++ b/web-site/web-form/index.html
@@ -21,13 +21,13 @@
                     <h2>Login Form</h2>
                     <form>
                         <div class="inputBox">
-                            <input type="text" placeholder="Username">
+                            <input type="email" placeholder="email">
                         </div>
                         <div class="inputBox">
                             <input type="password" placeholder="Password">
                         </div>
                         <div class="inputBox">
-                            <input type="submit" value="Login">
+                            <input type="submit" value="Entrar">
                         </div>
                         <p class="forget">Forgot Password ? <a href="#">Click Here</a></p>
                         <p class="forget">Don't an account > ?<a href="#">Sign up</a></p>
