--- a/web-site/web-kame/index.html
+++ b/web-site/web-kame/index.html
@@ -4,34 +4,53 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Disney+</title>
+  <title>KAME HOUSE</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <section>
-    <div class="center">
-      <header>
-        <div class="logo">
-          <a href="/"><h1>Kame</h1></a>
-        </div>
-        <nav>
-          <ul class="menu-item">
 
-            <li class="menu-items">
-              <a class="button" href="">Home</a></li>
-            <li><a class="button" href="">Projects</a></li>
-            <li><a class="button" href="">Code</a></li>
-            <li><a class="button" href="">About</a></li>
-            <li><a class="button" href="">social</a></li>
+  <header id="">
+    <div class="logo">
+      <h1><a href="#"><span>Kame</span>House</h1></a>
+    </div>
 
-          </ul>
-        </nav>
+    <nav>
+      <ul class="navlist">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">History</a></li>
+        <li><a href="#">Universe</a></li>
+        <li><a href="#">Kames</a></li>
 
-      </header>
+      </ul>
+    </nav>
+  </header>
+
+
+
+  <section class="main-header">
+    <div class="main-text">
+      <h5>Welcome!</h5>
+      <h1>Dragon Ball Universe</h1>
+      <p>Hello, i am son Goku!</p>
+      <div class="main-btn">
+        <a class="btn" href="#">lest go</a>
+        <a class="btn2" href="#">Heros</a>
+      </div>
     </div>
   </section>
-  
+<section>
+  <div>
+    <h1>freeza</h1>
+
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex ducimus voluptates tenetur facere praesentium, doloremque ullam aliquid non neque ab corrupti, officia voluptate excepturi quidem perspiciatis provident. Accusantium, corrupti cum.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex ducimus voluptates tenetur facere praesentium, doloremque ullam aliquid non neque ab corrupti, officia voluptate excepturi quidem perspiciatis provident. Accusantium, corrupti cum.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex ducimus voluptates tenetur facere praesentium, doloremque ullam aliquid non neque ab corrupti, officia voluptate excepturi quidem perspiciatis provident. Accusantium, corrupti cum.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex ducimus voluptates tenetur facere praesentium, doloremque ullam aliquid non neque ab corrupti, officia voluptate excepturi quidem perspiciatis provident. Accusantium, corrupti cum.</p>
+  </div>
+</section>
+  <section class=""></section>
+
 </body>
 
 </html>
