--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Works</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
-    <script src='main.js'></script>
+  
 </head>
 <body>
     <section class="hero">
@@ -37,5 +36,6 @@
     </div>
     </section>
     
+    <script type="module" src='/src/main.js'></script>
 </body>
 </html>
