--- a/web-site/web-pro/index.html
+++ b/web-site/web-pro/index.html
@@ -20,14 +20,14 @@
                 <div class="logo">
                     <a href="#">Bin <span>adverture</span><a>
                 </div>
-                        <nav>
-                            <ul class="bar">
-                                <li><a href="#hero">Home</a></li>
-                                <li><a href="#home">Projects</a></li>
-                                <li><a href="#home">Code</a></li>
-                                <li><a href="#home">Conatact</a></li>
-                            </ul>
-                        </nav>
+                <nav>
+                    <ul class="bar">
+                        <li><a href="#hero">Home</a></li>
+                        <li><a href="#home">Projects</a></li>
+                        <li><a href="#home">Code</a></li>
+                        <li><a href="#home">Conatact</a></li>
+                    </ul>
+                </nav>
             </header>
         </div>
     </section>
@@ -35,6 +35,16 @@
     <!--Home section-->
     <section class="home" id="home">
 
+        <div class="img">
+            <a href="/"><img src="/web-site/img/6rd.gif" alt="site" usemap="#map"></a>
+
+            <map name="map">
+
+                <area shape="rect" coords="34,44,270,350" alt="Computer" href="computer.htm">
+                <area shape="rect" coords="290,172,333,250" alt="Phone" href="phone.htm">
+                <area shape="circle" coords="337,300,44" alt="Coffee" href="coffee.htm">
+            </map>
+        </div>
         <div class="home-text">
             <h1><span>Welcome</span> the word of tecnologie</h1>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque velit accusantium est, ducimus, fuga
@@ -42,11 +52,64 @@
                 repudiandae ipsam. Earum, iste.</p>
         </div>
         <div class="home-img">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa repellat impedit, eius nisi neque aliquid
-                ipsum quisquam inventore voluptatem ea, similique velit natus hic doloremque tempora consequuntur rem
-                nihil est?</p>
-            <a href="#">book a table</a>
+            <pre>
+                <h2> testando HR</h2>
+                <blockquote>Lorem ipsum dolor . Suscipit, voluptatem. Doloribus, at expedita eu non id in, explicabo ad quaerat, eius aliquid corporis exercitationem culpa impedit sed sapiente aliqua modi.</blockquote>
+                <hr>
+                <h2>testando</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa repellat impedit, eius nisi neque aliquid
+                    ipsum quisquam inventore voluptatem ea, similique velit natus hic doloremque tempora consequuntur rem
+                    </p>
+                <address>
+                    daniel gomes <br>
+                    11 981012896 <br>
+                    rua stark 258 <br>
+                </address>
+            </pre>
+            <table>
+                <tr>
+                    <th>daniel</th>
+                    <th>daniel</th>
+                    <th>daniel</th>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="/web-site/web-dog/index.html">
+                            <img src="/web-site/img/drn.jpg" alt="">
+                        </a>
+                    </td>
+                    <td>
+                        <a href="/web-site/web-dog/index.html">
+                            <img src="/web-site/img/drn.jpg" alt="">
+                        </a>
+                    </td>
+                    <td>
+                        <a href="/web-site/web-dog/index.html">
+                            <img src="/web-site/img/drn.jpg" alt="">
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>daniel</td>
+                    <td>daniel</td>
+                    <td>daniel</td>
+                </tr>
+            </table>
+
+
+
         </div>
+
+        <dl>
+            <dt>coffe daniel</dt>
+
+            <dd>- tomar agora a tarde</dd>
+
+            <dt>coffe ingridy</dt>
+
+            <dd>- tomar mais tarde</dd>
+
+        </dl>
 
     </section>
 
