--- a/web-js/to-do-list/index.html
+++ b/web-js/to-do-list/index.html
@@ -15,24 +15,25 @@
         <header>
             <h1>Lista</h1>
         </header>
-        <form id="todo-form">
+        <form id="edit-form">
             <p>Adicione a sua tarefa:</p>
             <div class="form-control">
-                <input type="text" id="todo-input" placeholder="criar">
+                <input type="text" id="edit-input" placeholder="criar">
                 <button type="submit">pronto</button>
             </div>
         </form>
+        
         <form id="edit-form">
             <p>editar</p>
             <input type="text" id="edit-input" placeholder="editar">
             <button type="submit">pronto</button>
         </form>
-        <div class="to-bar">
+        <div class="toolbar">
             <div class="search">
                 <h4>Pesquisar:</h4>
                 <form>
                     <input type="text"  placeholder="Buscar" id="seach-input">
-                    <button id="erase-button"type="submit">ok</button>
+                    <button id="erase-button">ok</button>
                 </form>
             </div>
         </div>
