--- a/web-site/web-flex-item/flex.html
+++ b/web-site/web-flex-item/flex.html
@@ -1,62 +1,61 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
 
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="flex.css">
-    </head>
-    <body>
-      <section class="container">
-        <div class="item">1</div>
-        <div class="item">1</div>
-        <div class="item">1</div>
-        <div class="item">1</div>
-      </section>
-        <script src="" async defer></script>
-    </body>
-=======
-<html lang="en">
+
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>flex</title>
+    <title>flex box</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/flex.css">
 </head>
+
 <body>
-     
 
-<section class="container-1">
-    <div class="items">
-        <div class="item-1">1</div>
-        <div class="item">2</div>
-        <div class="item">3</div>
-        <div class="item">4</div>
-    </div>
-</section>
 
-<section class="container-2 ">
-    <div class="items-2">
-        <div class="item-2">1</div>
-        <div class="item-2">2</div>
-        <div class="item-2">3</div>
-        <div class="item-2">4</div>
-    </div>
-</section>
-<section class="container-3">
-    <div class="items-3">
-        <div class="item-3">1</div>
-        <div class="item-3">2</div>
-        <div class="item-3">3</div>
-        <div class="item-3">4</div>
-    </div>
-</section>
+    <section class="container">
+        <div class="items">
+            <div class="item">1</div>
+            <div class="item">2</div>
+            <div class="item">3</div>
+            <div class="item">4</div>
 
+        </div>
+    </section>
+
+    <section class="container-2 ">
+        <div class="items-2">
+            <div class="item-2">1</div>
+            <div class="item-2">2</div>
+            <div class="item-2">3</div>
+            <div class="item-2">4</div>
+        </div>
+    </section>
+
+    <section class="container-3">
+        <div class="items-3">
+            <div class="item-3">1</div>
+            <div class="item-3">2</div>
+            <div class="item-3">3</div>
+            <div class="item-3">4</div>
+        </div>
+    </section>
+    <section class="container-4">
+                <nav>
+                    <ul>
+                        <li class="item">HOME</li>
+                        
+                    </ul>
+                </nav>
+
+        <div class="items-4">
+            <div class="item-4">1</div>
+            <div class="item-4">2</div>
+            <div class="item-4">3</div>
+            <div class="item-4">4</div>
+        </div>
+    </section>
 </body>
->>>>>>> origin/main
+
 </html>
