--- a/web-site/web-flex-item/flex.html
+++ b/web-site/web-flex-item/flex.html
@@ -42,13 +42,6 @@
         </div>
     </section>
     <section class="container-4">
-                <nav>
-                    <ul>
-                        <li class="item">HOME</li>
-                        
-                    </ul>
-                </nav>
-
         <div class="items-4">
             <div class="item-4">1</div>
             <div class="item-4">2</div>
@@ -56,6 +49,40 @@
             <div class="item-4">4</div>
         </div>
     </section>
+    <section class="container-5 ">
+        <div class="items-5">
+            <div class="item-5">3</div>
+            <div class="item-5">2</div>
+            <div class="item-5">1</div>
+            <div class="item-5">4</div>
+            <div class="item-5">3</div>
+            <div class="item-5">2</div>
+            <div class="item-5">1</div>
+            <div class="item-5">4</div>
+        </div>
+    </section>
+
+    <section class="container-6 ">
+        <div class="items-6">
+            <div class="item-6">1</div>
+            <div class="item-6">2</div>
+            <div class="item-6">3</div>
+            <div class="item-6">4</div>
+            <div class="item-6">1</div>
+            <div class="item-6">2</div>
+            <div class="item-6">3</div>
+            <div class="item-6">4</div>
+        </div>
+    </section>
+
+    <div class="flex"></div>
+    <div class="flex1"></div>
+    <div class="flex2"></div>
+    <div class="flex3"></div>
+
+
+
+
 </body>
 
 </html>
