--- a/web-site/web-pesp/index.html
+++ b/web-site/web-pesp/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+
     <script src='main.js'></script>
+    
 </head>
+
 <body>
- 
+    <section class="sec">
+        <header>
+            <a href="#"><img src="img/logo.png" class="logo" alt="logo"></a>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">What's New</a></li>
+                <li><a href="#">Newsletter</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </header>
+    </section>
 </body>
+
 </html>
