--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Works</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/index.css">
 </head>
+
 <body>
     <section class="hero">
         <div class="main-width">
@@ -24,18 +26,39 @@
                         <li class="btn"><a href="#">Contact</a></li>
                     </ul>
                 </nav>
-            </header>
-            <div class="content">
-                <div class="main-text">
-                    <h1>FRONT END DEVELOPER </h1>
-                    <h2>like</h2>
+                <div class="content">
+                    <div class="main-text">
+                        <h1>FRONT END DEVELOPER </h1>
+                        <h2>like</h2>
+                    </div>
                 </div>
-            </div>
-
+            </header>
         </div>
-    </div>
+        </div>
     </section>
-    
-    <script type="module" src='/src/main.js'></script>
+
+    <h1>Web Sites</h1>
+    <section id="container-main">
+        <div class="content-cards">
+            <div class="content-card">
+                <ul>
+                    <li><a class="item" href="#">site</a></li>
+                    <li><a class="item" href="#">site</a></li>
+                    <li><a class="item" href="#">site</a></li>
+                    <li><a class="item" href="#">site</a></li>
+                    <li><a class="item" href="#">site</a></li>
+                    <li><a class="item" href="#">site</a></li>
+                    <li><a class="item" href="#">site</a></li>
+                    <li><a class="item" href="#">site</a></li>
+                    <li><a class="item" href="#">site</a></li>
+                    <li><a class="item" href="#">site</a></li>
+                    <li><a class="item" href="#">site</a></li>
+                    <li><a class="item" href="#">site</a></li>
+                    <li><a class="item" href="#">site</a></li>
+                </ul>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
