--- a/web-flexbox/web-flex2/index.html
+++ b/web-flexbox/web-flex2/index.html
@@ -160,7 +160,20 @@
             <div class="item fs-1">3</div>
         </section>
    
-
+        <h1>flex-direction: flex-shrink 1;</h1>
+        <section class="flex-shrink">
+            <div class="item fk-1">1</div>
+            <div class="item fk-2">2</div>
+            <div class="item fk-3">3</div>
+            <div class="item fk-1">1</div>
+            <div class="item fk-2">2</div>
+            <div class="item fk-3">3</div>
+            <div class="item fk-1">1</div>
+            <div class="item fk-2">2</div>
+            <div class="item fk-3">3</div>
+            
+        </section>
+   
  
     </div>
 
