--- a/web-site/web-sass/index.html
+++ b/web-site/web-sass/index.html
@@ -6,10 +6,14 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-     
+     <div class="container">
+        <h1>Sass doc</h1>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id suscipit soluta laborum officiis quasi facere corrupti asperiores recusandae error. Laudantium a rem dolore quaerat non ut dolorum quae impedit quas.</p>
+     </div>
 
 
 
