--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
                 <nav>
                     <ul>
                         <li class="active"><a href="#">Home</a></li>
-                        <li><a href="/web-site/index.html">Gallery</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="/web-project/index.html">Portfolio</a></li>
                         <li class="btn"><a href="#">Contact</a></li>
                     </ul>
                 </nav>
@@ -59,6 +56,11 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div>
+            <button>up</button>
+        </div>
+    </footer>
 </body>
 
 </html>
