--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
                 </div>
                 <nav>
                     <ul>
-                        <li class="active"><a href="#">Home</a></li>
-                        <li class="btn"><a href="#">Contact</a></li>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Contact</a></li>
                     </ul>
                 </nav>
                 <div class="content">
                     <div class="main-text">
                         <h1>FRONT END DEVELOPER </h1>
-                        <h2>like</h2>
+                        <h2>Web Sites</h2>
                     </div>
                 </div>
             </header>
@@ -34,27 +34,12 @@
         </div>
     </section>
 
-    <h1>Web Sites</h1>
-    <section id="container-main">
-        <div class="content-cards">
-            <div class="content-card">
-                <ul>
-                    <li><a class="item" href="#">site</a></li>
-                    <li><a class="item" href="#">site</a></li>
-                    <li><a class="item" href="#">site</a></li>
-                    <li><a class="item" href="#">site</a></li>
-                    <li><a class="item" href="#">site</a></li>
-                    <li><a class="item" href="#">site</a></li>
-                    <li><a class="item" href="#">site</a></li>
-                    <li><a class="item" href="#">site</a></li>
-                    <li><a class="item" href="#">site</a></li>
-                    <li><a class="item" href="#">site</a></li>
-                    <li><a class="item" href="#">site</a></li>
-                    <li><a class="item" href="#">site</a></li>
-                    <li><a class="item" href="#">site</a></li>
-                </ul>
-            </div>
-        </div>
+    
+    <section class="container  cards">
+        <div class="item"><a href="/web-site/web-dog/index.html">site</a></div>
+        <div class="item"><a href="/web-site/web-food/index.html">site</a></div>
+        <div class="item"><a href="/web-site/web-pepsi/index.html">site</a></div>
+        <div class="item"><a href="/web-blog/index.html">site</a></div>
     </section>
     <footer>
         <div>
