--- a/web-site/modelo1/index.html
+++ b/web-site/modelo1/index.html
@@ -66,6 +66,15 @@
             <textarea name="" id="" cols="30" rows="10"></textarea>
         </div>
 
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat maiores magnam in! Debitis est culpa
+            suscipit maxime eligendi ipsam dicta nisi nostrum. Dolores cumque rerum doloremque veniam maxime, quae
+            temporibus.  <br><meter min="32" max="38" value="36"></meter>> </p>
+
+        <details open="open">
+            <summary>entrar</summary>
+            <p>hello world</p>
+        </details>
+
         <a href="#">button</a>
         <a href="#">button</a>
         <a href="#">button</a>
