--- a/web-site/modelo2/index.html
+++ b/web-site/modelo2/index.html
@@ -24,10 +24,10 @@
 
         <ul class="navbar">
             <li><a href="#" class="active">Home</a></li>
-            <li><a href="#">Turismo</a></li>
-            <li><a href="#">Eventos</a></li>
-            <li><a href="#">Agendamentos</a></li>
-            <li><a href="#">Faq</a></li>
+            <li><a href="#">Events</a></li>
+            <li><a href="#">History</a></li>
+            <li><a href="#">Schedules</a></li>
+            <li><a href="#">help</a></li>
         </ul>
 
         <div class="header-icons">
@@ -37,7 +37,7 @@
     <!--------------- Home ------------------->
 <section class="home">
     <div class="home-img">
-        <img src="" alt="">
+        <img src="img/Escultures-Number13.svg" alt="capa">
     </div>
 
     <div class="home-text">
