--- a/web-frameorks/bootstrap/index.html
+++ b/web-frameorks/bootstrap/index.html
@@ -6,44 +6,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- link bootstrap-->
-    <link rel="stylesheet" href="style.css">
     <!-- CSS only -->
+    <link rel="stylesheet" href="style.css">
+    <!-- link bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!-- CSS Box incons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 
     <title>web bootstrap</title>
 </head>
 
 <body>
     <header>
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled">Disabled</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+        <a href="#" class="logo">
+            <h1><i class='bx bxs-invader'></i></h1>
+        </a>
 
+        <ul class="navbar">
+            <li><a href="#" class="item">Projects</a></li>
+            <li><a href="#" class="item">Schedule</a></li>
+            <li><a href="#" class="item">Contact</a></li>
+        </ul>
     </header>
+
+    <section>
+        <div class="home">
+            <img src="img/background.jpg">
+        </div>
+        <div class="home-text">
+            <h1>DE OLHO NO FUTURO</h1>
+        </div>
+    </section>
 </body>
 
 </html>
