--- a/web-site/modelo3/index.html
+++ b/web-site/modelo3/index.html
@@ -64,16 +64,16 @@
 
     <header>
         <div class="container-carousel">
-            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+            <div id="carouselExampleAutoplaying" class="carousel slide " data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="img/feed-3.jpg" class="d-block w-100" alt="...">
+                        <img src="img/feed-3.jpg" class="d-block mw-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/feed-4.jpg" class="d-block w-100" alt="...">
+                        <img src="img/feed-4.jpg" class="d-block mw-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/feed-5.jpg" class="d-block w-100" alt="...">
+                        <img src="img/feed-5.jpg" class="d-block mw-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
