--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Workspace</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -14,38 +14,20 @@
         <div class="main-width">
             <header>
                 <div class="logo">
-                    <h2><a href="/">Work State</a></h2>
-
+                    <h2><a href="/">Work Space</a></h2>
                 </div>
                 <nav>
                     <ul>
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">projetos</a></li>
                     </ul>
                 </nav>
-                <div class="content">
-                    <div class="main-text">
-                        <h1>FRONT END DEVELOPER </h1>
-                        <h2>Web Sites</h2>
-                    </div>
-                </div>
             </header>
         </div>
         </div>
     </section>
-
-    
-    <section class="container  cards">
-        <div class="item"><a href="/web-site/web-dog/index.html">site</a></div>
-        <div class="item"><a href="/web-site/web-food/index.html">site</a></div>
-        <div class="item"><a href="/web-site/web-pepsi/index.html">site</a></div>
-        <div class="item"><a href="/web-blog/index.html">site</a></div>
-    </section>
-    <footer>
-        <div>
-            <button>up</button>
-        </div>
-    </footer>
+                            
+    <footer></footer>
 </body>
 
 </html>
