--- a/componets/button/index.html
+++ b/componets/button/index.html
@@ -5,15 +5,13 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Buttons</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
-    <script src='main.js'></script>
+    <link rel='stylesheet' href='css/style.css'>
 </head>
 <body>
-    <div class="container">
-        <div class="btn"><a href="#">Read More</a></div>
-        <div class="btn"><a href="#">Read More</a></div>
-        <div class="btn"><a href="#">Read More</a></div>
-        <div class="btn"><a href="#">Read More</a></div>
-    </div>
+
+
+
+    <script src='main.js'></script>
+
 </body>
 </html>
